leveldb-1.22/include/leveldb/c.h

/* Exported types */

typedef struct leveldb_t leveldb_t;
typedef struct leveldb_cache_t leveldb_cache_t;
typedef struct leveldb_comparator_t leveldb_comparator_t;
typedef struct leveldb_env_t leveldb_env_t;
typedef struct leveldb_filterpolicy_t leveldb_filterpolicy_t;
typedef struct leveldb_iterator_t leveldb_iterator_t;
typedef struct leveldb_logger_t leveldb_logger_t;
typedef struct leveldb_options_t leveldb_options_t;
typedef struct leveldb_readoptions_t leveldb_readoptions_t;
typedef struct leveldb_snapshot_t leveldb_snapshot_t;
typedef struct leveldb_writebatch_t leveldb_writebatch_t;
typedef struct leveldb_writeoptions_t leveldb_writeoptions_t;
typedef uint32_t bool_t;
/* DB operations */

LEVELDB_EXPORT_C leveldb_t* leveldb_open(const leveldb_options_t* options,
                                       const char* name, char** errptr);
LEVELDB_EXPORT_C void leveldb_close(leveldb_t* db);
LEVELDB_EXPORT_C void leveldb_put(leveldb_t* db,
                                const leveldb_writeoptions_t* options,
                                const char* key, size_t keylen, const char* val,
                                size_t vallen, char** errptr);
LEVELDB_EXPORT_C void leveldb_delete(leveldb_t* db,
                                   const leveldb_writeoptions_t* options,
                                   const char* key, size_t keylen,
                                   char** errptr);
LEVELDB_EXPORT_C void leveldb_write(leveldb_t* db,
                                  const leveldb_writeoptions_t* options,
                                  leveldb_writebatch_t* batch, char** errptr);
/* Returns NULL if not found.  A malloc()ed array otherwise.
   Stores the length of the array in *vallen. */
LEVELDB_EXPORT_C char* leveldb_get(leveldb_t* db,
                                 const leveldb_readoptions_t* options,
                                 const char* key, size_t keylen, size_t* vallen,
                                 char** errptr);
LEVELDB_EXPORT_C bool_t leveldb_get2(
                                leveldb_t* db, const leveldb_readoptions_t* options, const char* key,
                                size_t keylen, void (*get_callback)(const char* value, size_t vallen),
                                char** errptr);
LEVELDB_EXPORT_C leveldb_iterator_t* leveldb_create_iterator(
    leveldb_t* db, const leveldb_readoptions_t* options);
LEVELDB_EXPORT_C const leveldb_snapshot_t* leveldb_create_snapshot(leveldb_t* db);
LEVELDB_EXPORT_C void leveldb_release_snapshot(
    leveldb_t* db, const leveldb_snapshot_t* snapshot);
/* Returns NULL if property name is unknown.
   Else returns a pointer to a malloc()-ed null-terminated value. */
LEVELDB_EXPORT_C char* leveldb_property_value(leveldb_t* db,
                                            const char* propname);
LEVELDB_EXPORT_C void leveldb_approximate_sizes(
    leveldb_t* db, int num_ranges, const char* const* range_start_key,
    const size_t* range_start_key_len, const char* const* range_limit_key,
    const size_t* range_limit_key_len, uint64_t* sizes);
LEVELDB_EXPORT_C void leveldb_compact_range(leveldb_t* db, const char* start_key,
                                          size_t start_key_len,
                                          const char* limit_key,
                                          size_t limit_key_len);
/* Management operations */

LEVELDB_EXPORT_C void leveldb_destroy_db(const leveldb_options_t* options,
                                       const char* name, char** errptr);
LEVELDB_EXPORT_C void leveldb_repair_db(const leveldb_options_t* options,
                                      const char* name, char** errptr);
/* Iterator */

LEVELDB_EXPORT_C void leveldb_iter_destroy(leveldb_iterator_t*);
LEVELDB_EXPORT_C unsigned char leveldb_iter_valid(const leveldb_iterator_t*);
LEVELDB_EXPORT_C void leveldb_iter_seek_to_first(leveldb_iterator_t*);
LEVELDB_EXPORT_C void leveldb_iter_seek_to_last(leveldb_iterator_t*);
LEVELDB_EXPORT_C void leveldb_iter_seek(leveldb_iterator_t*, const char* k,
                                      size_t klen);
LEVELDB_EXPORT_C void leveldb_iter_next(leveldb_iterator_t*);
LEVELDB_EXPORT_C void leveldb_iter_prev(leveldb_iterator_t*);
LEVELDB_EXPORT_C const char* leveldb_iter_key(const leveldb_iterator_t*,
                                            size_t* klen);
LEVELDB_EXPORT_C const char* leveldb_iter_value(const leveldb_iterator_t*,
                                              size_t* vlen);
LEVELDB_EXPORT_C void leveldb_iter_get_error(const leveldb_iterator_t*,
                                           char** errptr);
/* Write batch */

LEVELDB_EXPORT_C leveldb_writebatch_t* leveldb_writebatch_create();
LEVELDB_EXPORT_C void leveldb_writebatch_destroy(leveldb_writebatch_t*);
LEVELDB_EXPORT_C void leveldb_writebatch_clear(leveldb_writebatch_t*);
LEVELDB_EXPORT_C void leveldb_writebatch_put(leveldb_writebatch_t*,
                                           const char* key, size_t klen,
                                           const char* val, size_t vlen);
LEVELDB_EXPORT_C void leveldb_writebatch_delete(leveldb_writebatch_t*,
                                              const char* key, size_t klen);
LEVELDB_EXPORT_C void leveldb_writebatch_iterate(
    const leveldb_writebatch_t*, void* state,
    void (*put)(void*, const char* k, size_t klen, const char* v, size_t vlen),
    void (*deleted)(void*, const char* k, size_t klen));
LEVELDB_EXPORT_C void leveldb_writebatch_append(
    leveldb_writebatch_t* destination, const leveldb_writebatch_t* source);
/* Options */

LEVELDB_EXPORT_C leveldb_options_t* leveldb_options_create();
LEVELDB_EXPORT_C void leveldb_options_destroy(leveldb_options_t*);
LEVELDB_EXPORT_C void leveldb_options_set_comparator(leveldb_options_t*,
                                                   leveldb_comparator_t*);
LEVELDB_EXPORT_C void leveldb_options_set_filter_policy(leveldb_options_t*,
                                                      leveldb_filterpolicy_t*);
LEVELDB_EXPORT_C void leveldb_options_set_create_if_missing(leveldb_options_t*,
                                                          unsigned char);
LEVELDB_EXPORT_C void leveldb_options_set_error_if_exists(leveldb_options_t*,
                                                        unsigned char);
LEVELDB_EXPORT_C void leveldb_options_set_paranoid_checks(leveldb_options_t*,
                                                        unsigned char);
LEVELDB_EXPORT_C void leveldb_options_set_env(leveldb_options_t*, leveldb_env_t*);
LEVELDB_EXPORT_C void leveldb_options_set_info_log(leveldb_options_t*,
                                                 leveldb_logger_t*);
LEVELDB_EXPORT_C void leveldb_options_set_write_buffer_size(leveldb_options_t*,
                                                          size_t);
LEVELDB_EXPORT_C void leveldb_options_set_max_open_files(leveldb_options_t*, int);
LEVELDB_EXPORT_C void leveldb_options_set_cache(leveldb_options_t*,
                                              leveldb_cache_t*);
LEVELDB_EXPORT_C void leveldb_options_set_block_size(leveldb_options_t*, size_t);
LEVELDB_EXPORT_C void leveldb_options_set_block_restart_interval(
    leveldb_options_t*, int);
LEVELDB_EXPORT_C void leveldb_options_set_max_file_size(leveldb_options_t*,
                                                      size_t);
LEVELDB_EXPORT_C void leveldb_options_set_compression(leveldb_options_t*, int);
/* Comparator */

LEVELDB_EXPORT_C leveldb_comparator_t* leveldb_comparator_create(
    void* state, void (*destructor)(void*),
    int (*compare)(void*, const char* a, size_t alen, const char* b,
                   size_t blen),
    const char* (*name)(void*));
LEVELDB_EXPORT_C void leveldb_comparator_destroy(leveldb_comparator_t*);
/* Filter policy */

LEVELDB_EXPORT_C leveldb_filterpolicy_t* leveldb_filterpolicy_create(
    void* state, void (*destructor)(void*),
    char* (*create_filter)(void*, const char* const* key_array,
                           const size_t* key_length_array, int num_keys,
                           size_t* filter_length),
    unsigned char (*key_may_match)(void*, const char* key, size_t length,
                                   const char* filter, size_t filter_length),
    const char* (*name)(void*));